refresh credentials properly, you idiot

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 hyper = "0.13.7"
 rusoto_core = "0.45.0"
 tokio = { version = "0.2.22", features = ["macros"] }
+rusoto_s3 = "0.45.0"
